--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
    body {
     height: 100vh;
     background: #f3eed8;
+    cursor: url("media\\cursor.svg"), auto ;
    } 
    .flex-center {
     display: flex;
@@ -17,15 +18,25 @@
     justify-content: center;
     align-items: center; 
    }
-   .card {
+ 
+   .card{
     overflow: visible !important;
     -webkit-transform-style: preserve-3d;
     background: transparent;
-    width: 600px;
-    height: 400px;
+    
     perspective: 1000px;
     transform-style: preserve-3d;
+    transition: transform 0.8s;
+
+
+    cursor: url("media\\click.svg"), auto;
+    width: 398px;
+    height: 361px;
    }
+   .card.is-flipped {
+    transform:  rotateY(-180deg);
+    }
+
    .card-inner {
     position: relative;
     width: 100%;
@@ -37,22 +48,19 @@
 
    }
 
-   .card:hover, .card-inner:hover {
-    transform: rotateY(180deg);
-   }
-
    .card-front, .card-back {
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-color: #930101;
+    background-color: transparent;
    }
 
    .card-back{
     transform: rotateY(180deg);
-    background-color: aqua;
    }
+
+
 </style>
 
 
@@ -60,13 +68,25 @@
 
 <body>
     <div class="flex-center">
-        <div class="card">
-            <div class="card-inner">
-                <div class="card-front">front</div>
-                <div class="card-back">back</div>
-            </div>
+        <div class="content-wrapper">
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-front"><img src="media\card-front.svg"></div>
+                        <div class="card-back"><img src="media\card-back.svg"></div>
+                    </div>
+                </div>
+             
         </div>
     </div>
+
+    <script>
+        var card = document.querySelectorAll('.card')[0];
+
+        card.addEventListener( 'click', function() {
+        card.classList.toggle('is-flipped');
+        });
+
+    </script>
 </body>
 
 
