--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
    .card-back{
     transform: rotateY(180deg);
    }
-
+@media only screen and (max-width: 600px) {
+  .card img {
+    transform: scale(2);
+  }
+}
 
 </style>
 
