--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     transform: rotateY(180deg);
    }
 @media only screen and (max-width: 600px) {
-  .card img {
+  img {
     transform: scale(2);
   }
 }
