--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
    .card-back{
     transform: rotateY(180deg);
    }
-@media only screen and (max-width: 600px) {
-  img {
-    transform: scale(2);
-  }
-}
+    @media only screen and (max-width: 600px) {
+        img {
+            width: 60vw;
+            
+        }
+    }
 
 </style>
 
